@@ -1,5 +1,6 @@
 ---version 2.0.2 released---
 
+14-aug-2008 - zeromus - restore savestate error recovery functionality. This should have the side effect of guaranteeing that ( SF [ 2040761 ] Wrong savestate bug - crashes FCEUX) is resolved.
 14-aug-2008 - zeromus - SF [ 2047001 ] Low speeds crash FCEUX
 14-aug-2008 - zeromus - SF [ 2050371 ] FCM>FM2 converter should release file handle
 13-aug-2008 - zeromus - restore ungzipping (and unzipping in sdl) capability which was lost when archive support was added
